[package]
name = "graphqlness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "4.0"
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["time", "macros", "rt-multi-thread"] }

[dev-dependencies]
insta = { version = "1.14.0", features = ["redactions", "toml"] }